# naraninyeo

./: .gitignore  AGENTS.md  Dockerfile  MEMO.md  README.md  build.sh  main.py  pyproject.toml  test_business_logic.py  test_llm_integration.py  test_refactoring.py  test_services_completion.py
.devcontainer/: Dockerfile  devcontainer.json
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci-develop.yml  container-build.yml
naraninyeo/: __init__.py  __main__.py  chat_app.py  container.py  container_test.py  di.py  embeddings.py  local_client.py  main.py  settings.py  test.py  test_integration.py
naraninyeo/adapters/: __init__.py  attachment_client.py  clients.py  crawler.py  database.py  repositories.py  search_client.py  vectorstore.py
naraninyeo/adapters/agents/: extractor.py  planner.py  responder.py
naraninyeo/agents/: planner.py  responder.py
naraninyeo/agents/tools/: search.py
naraninyeo/api/: __init__.py  dependencies.py  interfaces.py  models.py  router.py  routes.py
naraninyeo/api/agents/: base.py  execution_informer.py  memory_extractor.py  memory_pruner.py  response_evaluator.py  response_generator.py  response_planner.py  summary_extractor.py
naraninyeo/api/graphs/: new_message.py
naraninyeo/api/handlers/: frontend_handler.py  message_handler.py  reply_handler.py
naraninyeo/api/infrastructure/: interfaces.py
naraninyeo/api/nodes/: add_memory.py  evaluate_response.py  execute_plan.py  finalize_response.py  generate_reply.py  generate_response.py  get_history.py  manage_memory.py  messages_to_memory.py  plan.py  retrieve_memory.py  save_memory.py  save_message copy.py  search_history.py  search_web.py  store_message.py
naraninyeo/api/routers/: bot.py  core.py  message.py
naraninyeo/api/tasks/: generate_reply.py  get_history.py  manage_memory.py  retrieve_memory.py  save_memory.py  search_history.py  search_web.py  store_message.py
naraninyeo/app/: __init__.py  context.py  pipeline.py  reply.py
naraninyeo/assistant/: __init__.py  llm_toolkit.py  memory_management.py  message_repository.py  models.py  prompts.py  retrieval_workflow.py
naraninyeo/assistant/retrieval/: __init__.py  execution.py  planner.py  strategies.py
naraninyeo/core/: __init__.py  config.py  container.py  database.py  flow.py  middleware.py  models.py  plugins.py  services.py  settings.py  task.py  variables.py  vectorstore.py
naraninyeo/core/application/: new_message_handler.py
naraninyeo/core/contracts/: memory.py  retrieval.py
naraninyeo/core/llm/: agent.py  providers.py  spec.py
naraninyeo/core/models/: memory.py  message.py  reply.py  retrieval.py
naraninyeo/core/pipeline/: runner.py  steps.py  types.py
naraninyeo/domain/: variable.py
naraninyeo/domain/application/: context_builder.py  new_message_handler.py
naraninyeo/domain/gateway/: memory.py  message.py  reply.py  retrieval.py  retrieval_post.py  retrieval_rank.py
naraninyeo/domain/model/: memory.py  message.py  reply.py  retrieval.py
naraninyeo/domain/usecase/: memory.py  message.py  reply.py  retrieval.py
naraninyeo/entrypoints/: __init__.py  __main__.py  cli.py  cli_client.py  http.py  kafka.py  kafka_consumer.py
naraninyeo/handlers/: history.py  message.py  response.py
naraninyeo/infrastructure/: embedding.py  message.py  reply.py  retrieval.py  settings.py
naraninyeo/infrastructure/llm/: factory.py
naraninyeo/infrastructure/memory/: extractor.py  extractor_llm.py  store.py
naraninyeo/infrastructure/pipeline/: context.py  steps.py
naraninyeo/infrastructure/retrieval/: plan_executor.py  planner.py  (+3 more)
naraninyeo/llm/: __init__.py  agent.py  interfaces.py  prompts.py  schemas.py
naraninyeo/models/: message.py
naraninyeo/plugins/: __init__.py  logging_middleware.py
naraninyeo/repository/: message.py
naraninyeo/router/: __init__.py  api_client.py  phone_client.py  router.py
naraninyeo/services/: api_client.py  attachment_service.py  conversation_service.py  embedding_service.py  llm_agent.py  message.py  message_handler.py  message_parser.py  message_service.py  random_responder.py  response.py  search_service.py
naraninyeo/test/: conftest.py  demo_web.py
naraninyeo/tests/: conftest.py  test_message_flow.py
naraninyeo/tools/: __init__.py  history.py  search.py
script/: demo_web.sh
src/naraninyeo/: __init__.py  __main__.py  conftest.py
tests/: conftest.py  test_integration.py
(+126 files in other folders)
