[project]
name = "naraninyeo"
version = "0.1.0"
description = "A FastAPI application that processes messages"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pymongo>=4.13.0",
    "httpx>=0.27.0",
    "aiokafka[zstd]>=0.12.0",
    "motor>=3.7.1",
    "loguru>=0.7.3",
    "google-genai>=1.21.1",
    "openai>=1.91.0",
    "ollama>=0.5.1",
    "pydantic-ai>=0.3.6",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.15.0",
    "dishka>=1.6.0",
    "crawl4ai>=0.7.2",
    "nest-asyncio>=1.6.0",
    "dateparser>=1.2.2",
    "logfire[httpx,pymongo]>=4.3.3",
]

[project.scripts]
naraninyeo = "naraninyeo.entrypoints.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "testcontainers>=4.12.0",
]
