[project]
name = "naraninyeo"
version = "0.1.0"
description = "A FastAPI application that processes messages"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "pymongo>=4.13.0",
    "httpx>=0.27.0",
    "aiokafka[zstd]>=0.12.0",
    "motor>=3.7.1",
    "loguru>=0.7.3",
    "google-genai>=1.21.1",
    "openai>=1.91.0",
    "ollama>=0.5.1",
    "pydantic-ai>=0.3.6",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.15.0",
    "dishka>=1.6.0",
    "crawl4ai>=0.7.2",
    "nest-asyncio>=1.6.0",
    "dateparser>=1.2.2",
    "markdownify>=1.2.0",
    "beautifulsoup4>=4.13.4",
    "nanoid>=2.0.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "openinference-semantic-conventions>=0.1.21",
    "openinference-instrumentation-pydantic-ai>=0.1.4",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "opentelemetry-instrumentation-pymongo>=0.57b0",
]

[project.scripts]
naraninyeo = "naraninyeo.entrypoints.__main__:main"

[dependency-groups]
dev = [
    "naraninyeo",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "testcontainers>=4.12.0",
]

[tool.uv]
package = true

[tool.uv.sources]
naraninyeo = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = 50
