[project]
name = "naraninyeo"
version = "0.1.0"
description = "A FastAPI application that processes messages"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "aiokafka[zstd]>=0.12.0",
    "loguru>=0.7.3",
    "ollama>=0.5.1",
    "pydantic-ai>=0.3.6",
    "dishka>=1.6.0",
    "dateparser>=1.2.2",
    "markdownify>=1.2.0",
    "beautifulsoup4>=4.13.4",
    "nanoid>=2.0.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "openinference-semantic-conventions>=0.1.21",
    "openinference-instrumentation-pydantic-ai>=0.1.4",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "opentelemetry-instrumentation-pymongo>=0.57b0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "langgraph>=1.0.1",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.1.1",
    "opentelemetry-instrumentation-system-metrics>=0.59b0",
    "opentelemetry-instrumentation-asyncpg>=0.59b0",
    "opentelemetry-instrumentation-aiokafka>=0.59b0",
    "opentelemetry-instrumentation-logging>=0.59b0",
    "aiobotocore>=2.25.1",
    "html-to-markdown>=2.5.6",
    "langsmith[otel]>=0.4.39",
]

[project.scripts]
naraninyeo = "naraninyeo.__main__:main"

[dependency-groups]
dev = [
    "naraninyeo",
    "pytest>=8.3.2",
    "pytest-asyncio>=1.2.0",
    "pytest-httpx>=0.30.0",
    "shiny>=1.5.0",
    "testcontainers>=4.12.0",
]

[tool.uv]
package = true

[tool.uv.sources]
naraninyeo = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = 50

[tool.basedpyright]
include = ["naraninyeo"]
typeCheckingMode = "standard"
